------------------------------------------------------------------------
r1361 | gaser | 2018-08-31 10:44:30

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat_batch_cat.sh
M       cat_batch_long.sh
M       cat_batch_spm.sh
M       cat_main.m
M       cat_surf_createCS.m
M       check_pipeline.sh
M       distribute_to_server.sh

(1) Fixed: Changed shell command scripts to "bash" because "sh" sometimes 
    caused problems (thanks to Vincent Koppelmann for pointing to that 
    issue).
(2) Changed: Added Yp0 as input for cat_surf_createCS which is used to 
    optionally refine pial and white matter surface.
------------------------------------------------------------------------
r1360 | gaser | 2018-08-29 15:49:24 +0200 (Mi, 29 Aug 2018) | 19 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat_main.m
M       cat_surf_createCS.m
M       cat_surf_results.m
M       html/cat.html

(1) Changed: Unused menus and options in cat_surf_results.m are now disabled 
    instead of not visible.
(2) Changed: Lights for rendering are changed in cat_surf_results.m
(3) Fixed: optional use of kmeans was not working in cat_main.m.
(4) Changed: Added some new options to extract pial and white matter surface
    which is still very slow, but might be helpful for mapping ultra-high 
    resolution data (still experimental).
(5) Changed: Use inverse deformation to map fsavg mask to native surface data
    to prevent unreliable values in subcortical areas.

------------------------------------------------------------------------
r1359 | gaser | 2018-08-17 14:09:22 +0200 (Fr, 17 Aug 2018) | 6 lines

Changed paths:
M       CHANGES.txt

(1) Changed: Added new flag to CAT_DeformSurf command in cat_surf_createCS.m
(2) Changed: Updated new binaries because of new flag for CAT_DeformSurf.

------------------------------------------------------------------------