@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>CAT12.5-rc1 - Computational Anatomy Toolbox for SPM12</title>
+    <title>CAT12.5 - Computational Anatomy Toolbox for SPM12</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <link rel="stylesheet" type="text/css" href="spm.css" />
     <link rel="stylesheet" type="text/css" href="../spm.css" />
@@ -24,7 +24,7 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12.5-rc1 (r1359) from 2018-08-17</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12.5 (r1361) from 2018-08-31</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
