@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1361 | gaser | 2018-08-31 10:44:30
+r1362 | gaser | 2018-08-31 10:47:25
+
+Changed paths:
+M       CHANGES.txt
+M       Contents.m
+M       html/cat.html
+M       spm_cat12.m
+
+Changed: Updated version information to CAT12.5.
+------------------------------------------------------------------------
+r1361 | gaser | 2018-08-31 10:44:57 +0200 (Fr, 31 Aug 2018) | 18 lines
 
 Changed paths:
 M       CAT12-Manual.docx
@@ -18,6 +28,7 @@ M       distribute_to_server.sh
     issue).
 (2) Changed: Added Yp0 as input for cat_surf_createCS which is used to 
     optionally refine pial and white matter surface.
+
 ------------------------------------------------------------------------
 r1360 | gaser | 2018-08-29 15:49:24 +0200 (Mi, 29 Aug 2018) | 19 lines
 
